# FileSpliter

./: Cargo.toml
src/: main.rs  structurs.rs
