[package]
name = "FileSpliter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6.2"
console = "0.15.7"
serde_json = { version = "1.0.107", features = [] }
serde = { version = "1.0.188", features = ["derive"] }
sha256 = "1.0.3"